--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-ATLAS_URI=mongodb+srv://darksider:Cf5RHYZpFXEVHZcT@cluster0-rayon.mongodb.net/UserProfiledb?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://darksider:Cf5RHYZpFXEVHZcT@cluster0-rayon.mongodb.net/Assignmentdb?retryWrites=true&w=majority
 SECRET=fDVUBE3aUa9FNricEohZ6pKDaR7BlsBptmXht36ARzY=
 MYSECRET=THIS_IS_MY_LITTLE_SECRET
 SENDGRID_API_KEY=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
